Additional spacing fixes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,3 +14,8 @@ html, body{
     position: relative;
     padding-bottom: 5em;
 }
+
+hr {
+    width: 100%;
+    margin: 3em 0;
+}
