--- a/src/styles/pages/contact.scss
+++ b/src/styles/pages/contact.scss
@@ -99,6 +99,7 @@
         justify-content: center;
         margin: auto;
         width: 90%;
+        margin-bottom: 4em;
         .BorderForm {
             padding: 1em;
         }
