--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -5,16 +5,11 @@
     margin: auto;
     .TextSection {
         display: grid;
-        row-gap: 1em;
-        hr {
-            width: 100%;
-        }
         .QuoteLeft {
             display: grid;
             grid-template-areas: "quote descr";
             grid-template-columns: 30% 70%;
             h3 {
-                padding: 0 1em;
                 grid-area: quote;
             }
             span {
@@ -49,12 +44,12 @@
                 grid-template-areas:
                     "quote"
                     "descr";
-                grid-template-columns: 90%;
+                grid-template-columns: 100%;
                 justify-content: center;
                 h3 {
                     text-align: center;
-                    justify-self: center;
-                    padding: 0;
+                    align-self: start;
+                    margin-top: 0;
                     font-size: 17px;
                 }
                 span {
