--- a/src/styles/pages/mortgage.scss
+++ b/src/styles/pages/mortgage.scss
@@ -14,10 +14,6 @@
             font-size: 20px;
             margin: auto;
         }
-        hr {
-            width: 100%;
-            margin: 2em 0;
-        }
     }
     .Calculator {
         padding-top: 2em;
@@ -55,9 +51,6 @@
             span{
                 font-size: 15px;
             }
-        }
-        p {
-            font-size: 15px;
         }
         .Calculator {
             justify-content: center;
